<resources>
    <string name="app_name">TODO List App</string>
    <string name="input_text">Next thing to do</string>
    <string name="button_add">ADD</string>
    <string name="button_save">Save</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="share">Share</string>
    <string name="message_not_checked">The thing you have to do is not completed yet</string>
    <string name="message_checked">"Completed On: "</string>
    <string name="button_share">Share</string>
    <string name="color">Color</string>
    <string name="select_color">Select Color</string>
    <string name="reminder">Don\'t forget to do this!</string>
    <string name="message_delete">Are you sure you want to delete this item?</string>
    <string name="message">Message</string>
    <string name="share_via">Share via</string>
    <string name="completed_on">"Completed On: "</string>
    <string name="prefs">My Shared prefs</string>
    <string name="items_count">"Count of all your TODO items: "</string>
    <string name="items_count_uncompleted">"Count of uncompleted TODO items: "</string>
    <string name="camera">Camera</string>
    <string name="image_from_camera">Image from camera</string>
    <string name="description">Input description here</string>
</resources>
